<resources>
    <string name="app_name" translatable="false">GeoReality</string>
    <string name="burger_menu_title">Open drawer</string>
    <string name="nav_menu_item_map">Map</string>
    <string name="nav_menu_item_cache">My caches</string>
    <string name="nav_menu_item_create_cache">Create new cache</string>
    <string name="nav_menu_title"></string>
    <string name="login_email_button">Sign-in with email</string>
    <string name="login_anon_button">Login as a guest</string>
    <string name="login_signup_button">Sign-up</string>
    <string name="nav_menu_item_logout">Logout</string>
    <string name="title">Title</string>
    <string name="type">Type</string>
    <string name="cache_type">Cache type</string>
    <string name="create_a_new_cache">Create a new cache</string>
    <string name="ar" translatable="false">AR</string>
    <string name="save">Save</string>
    <string name="audio" translatable="false">Audio</string>
    <string name="recording">Recording</string>
    <string name="audio_record">Record</string>
    <string name="_00_00">00:00</string>
    <string name="stop" translatable="false">Stop</string>
    <string name="ar_type_2d">2D text</string>
    <string name="ar_type_3d">3D model</string>
    <string name="ar_text">Write text to be displayed in model</string>
    <string name="_2d_text" translatable="false">2D Text</string>
    <string name="info" translatable="false">Info</string>
    <string name="audio_recording">Recording…</string>
    <string name="audio_play">Play audio</string>
    <string name="audio_new">New</string>
    <string name="audio_stop">Stop</string>
    <string name="log_out">Log out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="nav_menu_item_info" translatable="false">Info</string>
    <string name="cache_entity_title" translatable="false">title</string>
    <string name="cache_entity_creator" translatable="false">creator</string>
    <string name="cache_entity_type" translatable="false">type</string>
    <string name="cache_entity_button">Open cache</string>
    <string name="cache_entity_AR_type" translatable="false">AR cache</string>
    <string name="cache_entity_audio_type" translatable="false">Audio cache</string>
    <string name="map_info_window_open_ar">Open cache</string>
    <string name="cache_dialog_title">Opening cache</string>
    <string name="cache_dialog_message">You are about to open a cache. Do you want to proceed?</string>
    <string name="cache_dialog_cancel">Cancel</string>
    <string name="cache_dialog_open">Open</string>
    <string name="cache_model_duck">Duck</string>
    <string name="cache_model_avocado">Avocado</string>
    <string name="model1_url" translatable="false">https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/Duck/glTF/Duck.gltf</string>
    <string name="model2_url" translatable="false">https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/Avocado/glTF/Avocado.gltf</string>
    <string name="coordinate_string">Latitude: %1$s, longitude: %2$s</string>
    <string name="info_fragment_title">Information</string>
    <string name="info_fragment_preview">Welcome to GeoReality! The main feature of this application is the map. The map tracks your location at all times so you don\'t get lost! The objective is to discover caches. They are shown as red and blue markers on the map.</string>
    <string name="info_fragment_red_desc">The red marker is an AR marker. It contains a cache with alternate reality features.</string>
    <string name="info_fragment_blue_desc">The blue marker is an audio marker. It contains a cache with an audio recording that another person recorded.</string>
    <string name="info_fragment_infowindow_desc">Clicking on a marker will display an info window. The info window tells you if you are close enough to the cache to open it.  Clicking on a close enough cache\'s info window will open up the cache.</string>
    <string name="mycaches_title">My caches</string>
    <string name="label_myCaches">My caches</string>
    <string name="label_info" translatable="false">Info</string>
    <string name="label_cache_creation">Create a cache!</string>
    <string name="label_audio_cache">Audio cache</string>
    <string name="label_ar_cache">AR cache</string>
    <string name="useremail">UserEmail</string>
    <string name="email">email</string>
    <string name="complete_cache">Complete cache!</string>
    <string name="distanceText">You are too far away! Less than %1$s meters till you can open the cache.</string>
    <string name="ar_fragment_counter">Score: %1$s</string>
    <string name="cache_creation_title_warning">Title cannot be empty!</string>
    <string name="cache_creation_audiofile_warning">You must record audio!</string>
    <string name="cache_creation_2dtext_warning">Display text cannot be empty!</string>

</resources>