<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/emailmenu">
        <item
            android:id="@+id/useremail"
            android:enabled="false"
            android:title="@string/email" />
    </group>
    <group android:id="@+id/menu">
        <item android:title="@string/nav_menu_item_map"
            android:icon="@drawable/ic_baseline_map_24"/>

        <item android:title="@string/nav_menu_item_cache"
            android:icon="@drawable/ic_baseline_map_24"/>

        <item android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/nav_menu_item_info" />
    </group>
    <group>
        <item android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/nav_menu_item_logout"/>
    </group>
</menu>
