<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/saveButton"
        android:layout_width="373dp"
        android:layout_height="54dp"
        android:layout_marginBottom="16dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_switch"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="134dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="365dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:text="@string/create_a_new_cache"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="27dp" />

    <TextView
        android:id="@+id/cacheView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cache_type"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="115dp" />

    <TextView
        android:id="@+id/typeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="258dp" />

    <EditText
        android:id="@+id/title_text_input"
        android:layout_width="358dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="186dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="284dp" />

</androidx.constraintlayout.widget.ConstraintLayout>